fix fields appearing under editor buttons
https://anki.tenderapp.com/discussions/ankidesktop/33096-editor-buttons-in-additional-rows-overlap-fields-only-when-scrolled-down

--- a/web/editor.css
+++ b/web/editor.css
@@ -32,7 +32,6 @@ body {
 
 #topbutsOuter {
     position: fixed;
-    height: 24px;
     top: 0;
     padding: 2px;
     left: 0;
